# RISeed-Industrial

./: .gitignore  CMakeLists.txt  README.md  init-prompt.md
.github/workflows/: build_plugins.yml
CloudSeedCore/: Parameters.h
CloudSeedCore/DSP/: AllpassDiffuser.h  DelayLine.h  Lp1.h  ReverbChannel.h  ReverbController.h  Utils.h
Source/: AutomationWatcher.cpp  AutomationWatcher.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
